--- a/PS2020067_Assignment01/Timetable page.htm
+++ b/PS2020067_Assignment01/Timetable page.htm
@@ -121,7 +121,7 @@
 </tr>
 </table>
 <br><table align="center">
-<tr><td><a target="_blank" href="C:\Users\File\Documents\3rd year\Semester 1\COSC 31103\Assignment\Home Page.htm"><img src="C:\Users\File\Documents\3rd year\Semester 1\COSC 31103\Assignment\Home.jpeg" width="50" height="50"></a></td><td><a target="_black" href="C:\Users\File\Documents\3rd year\Semester 1\COSC 31103\Assignment\RegistrationFoam.htm" ><img src="C:\Users\File\Documents\3rd year\Semester 1\COSC 31103\Assignment\Register.jpeg" width="50" height="50"></a></td></tr>
+<tr><td><a target="_blank" href="C:\Users\File\Documents\3rd year\Semester 1\COSC 31103\Assignment\Index.htm"><img src="C:\Users\File\Documents\3rd year\Semester 1\COSC 31103\Assignment\Home.jpeg" width="50" height="50"></a></td><td><a target="_black" href="C:\Users\File\Documents\3rd year\Semester 1\COSC 31103\Assignment\RegistrationFoam.htm" ><img src="C:\Users\File\Documents\3rd year\Semester 1\COSC 31103\Assignment\Register.jpeg" width="50" height="50"></a></td></tr>
 </table>
 </body>
 </html>
